--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BookScope - Visual Book Explorer</title>
+    <title>Wizarding World Explorer</title>
+    <meta name="description" content="Explore the magical world of Harry Potter - books, characters, houses, and spells">
+    <meta name="theme-color" content="#7c3aed">
   </head>
   <body>
     <div id="root"></div>
